Overflow fix for iOS.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 html {
     height: 100%;
+    position: relative;
+    overflow-x: hidden;
 }
 
 body {
+    position: relative;
     overflow-x: hidden;
     margin: 0 auto;
     max-width: 620px;
